# OOP

./: CMakeLists.txt  main.cpp
include/: AppState.h  Button.h  Canvas.h  CanvasRenderer.h  ComponentInstance.h  ComponentLibrary.h  Grid.h  GridLines.h  Point.h  ProjectManager.h  PropertiesPanel.h  StartMenu.h  Toolbar.h  pagesize.h
lib/SDL3_ttf/include/SDL3_ttf/: SDL_textengine.h  SDL_ttf.h
lib/SDL3_ttf/lib/cmake/SDL3_ttf/: SDL3_ttfConfig.cmake
src/: Button.cpp  Canvas.cpp  CanvasRenderer.cpp  ComponentLibrary.cpp  StartMenu.cpp  Toolbar.cpp  main.cpp
